clusters/apps/authorization-server/overlays/home/image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-server
  namespace: authorization
spec:
  template:
    spec:
      containers:
        - name: authorization-server
          image: ghcr.io/dmgiangi/calcifer-authorization-server@sha256:e8aec9a7726cc982bd5c534c4ae9d9efcad11062dd84987611d5ea86f936b2cc
