clusters/apps/authorization-server/overlays/home/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authorization-server
  namespace: authorization
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`REPLACE_HOME_AUTH_FQDN`)
      kind: Rule
      services:
        - name: authorization-server
          port: 8080
  tls:
    secretName: authorization-server-tls
